--- a/index.html
+++ b/index.html
@@ -165,6 +165,27 @@
         <br/>
         <br/>
     </div>
+
+    <div id="result-modal" class="modal fade" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title">测试结果</h4>
+                </div>
+                <div class="modal-body">
+                    <p id="result-summary"></p>
+                    <ul id="error-questions"></ul>
+                    <br style="clear:both"/>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal" id="btn-retry">再来一次</button>
+                    <button type="button" class="btn btn-primary" data-dismiss="modal" id="btn-end">结束</button>
+                </div>
+            </div><!-- /.modal-content -->
+        </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
+
     <script>
         const shuffle = ([...arr]) => {
             let m = arr.length;
@@ -354,15 +375,48 @@
             function end_quiz() {
                 var seconds = parseInt($("#seconds-count").val());
                 var minutes = parseInt(seconds/60);
-                var r = window.confirm("你答对了" + RIGHT + "题，共" + COUNT + "题！"
-                        + "\n用时" + minutes + "分" + (seconds % 60) + "秒"
-                        + "\n点击『确认』再次测验，点击『取消』停止测验。");
-                if (r) {
+
+                $('#result-modal').modal({
+                      keyboard: false
+                })
+
+                var error_title = RIGHT < COUNT ? "错题列表如下：" : "";
+                $('#result-summary').text("你答对了" + RIGHT + "题，共" + COUNT + "题！"
+                        +"\n用时" + minutes + "分" + (seconds % 60) + "秒。" + error_title);
+
+                var eqs = "";
+                for (i = 0; i < COUNT; i++) {
+                    var q = errors[i];
+                    if (q) {
+                        var op = "";
+                        switch (q[0]) {
+                            case 0:
+                                op = "+";
+                                break;
+                            case 1:
+                                op = "-";
+                                break;
+                            case 2:
+                                op = "×";
+                                break;
+                            case 3:
+                                op = "÷";
+                                break;
+                        };
+                        eqs = eqs + "<li>" + q[1] + " " + op + " " + q[2] + " = " + (q[3] ? q[3] : '?') + "</li>";
+                    }
+                };
+
+                $('#error-questions').html(eqs);
+                $('#btn-retry').bind('click', function() {
                     start_quiz();
-                } else {
+                });
+
+                $('#btn-end').bind('click', function() {
                     $("#settings").show();
                     $("#quiz-box").hide();
-                }
+                });
+
             }
 
             if (SETUP) {
@@ -393,12 +447,13 @@
             });
 
             $("#btn-submit").bind("click", function() {
+                save_result();
                 var r = window.confirm("确定要提交答案吗？");
                 if (r) {
                     for (i = 0; i < COUNT; i++) {
                         var q = quiz[i];
-                        var aw = parseInt(result[i]);
-                        if (aw == q[3]) {
+                        var aw = result[i];
+                        if (parseInt(aw) == q[3]) {
                             RIGHT++;
                         } else {
                             q[3] = aw;
@@ -476,6 +531,21 @@
         }
         #nav-tip {
             padding-top:20px;
+        }
+        #result-modal p {
+            font-size: 18px;
+        }
+        #result-modal ul {
+            font-size: 18px;
+            padding-top: 16px;
+            padding-bottom: 16px;
+        }
+        #result-modal li {
+            float: left;
+            margin-right: 36px;
+        }
+        .modal-footer .btn {
+            font-size: 24px;
         }
     </style>
   </body>
