--- a/index.html
+++ b/index.html
@@ -356,6 +356,8 @@
 
                 quiz = make_quiz(MAX, COUNT, TYPE);
                 index = 0;
+                result = {};
+                errors = [];
                 set_question(quiz, index);
                 update_index_tip();
 
